Create Idea - Edit.XHTML - instert status changes Create Idea - View.XHTML - instert status changes

--- a/Idea-war/web/pages/idea/Create.xhtml
+++ b/Idea-war/web/pages/idea/Create.xhtml
@@ -41,6 +41,7 @@
                                 </p:selectManyCheckbox>
                                 
                                 <p:outputLabel value="#{bundle.CreateIdeaTitle_status}" for="descripcion" />
+                                <p:outputLabel value="#{bundle.CreateIdeaLabel_status}" for="estadoItem" />
                                 <p:selectOneRadio id="estadoItem" value="#{ideaController.selectedEstadoIdea}" 
                                                       layout="grid" columns="1" 
                                                       requiredMessage="#{bundle.NoStatusSelected}" >
