--- a/Idea-war/web/template.xhtml
+++ b/Idea-war/web/template.xhtml
@@ -13,11 +13,11 @@
     </h:head>
 
     <h:body>        
-        <div id="top">
-            <ui:insert name="top">
+        <div id="top" style="padding: 10px;">
+            <ui:insert name="top" >
                 <div>
-                    <div>
-                        <h1>i-dea</h1>
+                    <div>                        
+                        <h:graphicImage library="images" alt="I-dea" style="width:190px;height:70px;" value ="idea.png"/>
                 <h4>share4growth</h4>
                     </div>
                     
